--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -4,25 +4,11 @@
     justify-content: space-around;
     align-items: center;
     background-color: white;
-    position: -webkit-sticky; /* Safari */
+    position: -webkit-sticky; /*sticky nav in safari*/
     position: sticky;
-    top: 0;
+    top: 0px;
+    width: 100%;
 }
-
-.navbar__item {
-    width: 100px;
-    text-align: center;
-    text-justify: center;
-    flex-basis:5%;
-    list-style-type: none;
-    background-color: #B19FC8;
-    opacity: .5;
-    border-radius: 7px;
-    padding: 15px;
-    font-family: 'Roboto Slab', serif;
-    font-size: 1.3rem;
-}
-
 .navbar__item__logo {
     justify-content: center;
     flex-basis:20%;
@@ -30,8 +16,12 @@
 }
 
 .navbar__item__logo__img{
-    height: 100px;
+    height: 70px;
     justify-content: center;
+}
+
+.navbar_icon {
+    width: 50px;
 }
 
 .link_styles {
