--- a/src/components/posts/postFeed.css
+++ b/src/components/posts/postFeed.css
@@ -1,10 +1,8 @@
 .postFeed{
     display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
+    flex-flow: row-reverse wrap;
     align-items: flex-start;
-    justify-content: space-evenly;
-    width: 100%;
+    justify-content: space-between;
 }
 
 .imgPost {
