--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,9 +1,10 @@
 .profileContainer {
-    width: 100%;
     display:flex;
+    height: 100vh;
 }
 
-.postFeed{
+.profilePostFeed{
+    margin-top: 70px;
     justify-self: left;
     display: flex;
     flex-direction: row-reverse;
@@ -13,34 +14,33 @@
     width: 70%;
 }
 
-.imgPost {
+.profileImgPost {
     max-height: none;
     max-width: 400px;
     min-height: 200px;
     min-width: 200px;
     background-color:#F7F3FF;
     border-radius: 10px;
-    padding:.5%;
+    padding:1%;
     margin: 10px;
 }
 
-.imgPost__img {
+.profileImgPost__img {
     justify-content: center;
     align-items: center;
-    height: 400px;
-    width: 400px;
+    width: 250px;
     overflow: hidden;
     justify-content: center;
 }
 
-.textPost{
+.profileTextPost{
     max-height: none;
-    max-width: 400px;
+    max-width: 250px;
     min-height: none;
     min-width: 200px;
     background-color:#F7F3FF;
     border-radius: 10px;
-    padding:.5%;
+    padding: 1%;
     margin: 10px;
 }
 
@@ -50,19 +50,38 @@
 }
 
 .sideProfile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 30%;
     justify-self: right;
-    background-color: aqua;
+    background-color: #F7F3FF;
+    position: fixed;
+    height: 100%;
+    top:0;
+    left:70%;
+    z-index: -2;
+}
+
+.sideProfile__name{
+    color: #3D304C;
+}
+
+.sideProfile__img{
+    width: 100px;
+    overflow: hidden;
+    border-radius: 50%;
+    padding-right: 20px;
 }
 
 .btnContainer {
     display: flex;
-    align-self: right;
+    align-self: left;
     justify-content: space-around;
-    width: 20px;
-    height: 30px;
-    justify-self: right;
-    margin-left: 30px;
+    width: 55px;
+    height: 20px;
+    font-size: 10px;
+    margin-left: 0;
 }
 
 .btn_edit {
