edit profile button working, new properties added to profile table

--- a/src/components/posts/postForm.css
+++ b/src/components/posts/postForm.css
@@ -22,7 +22,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #B19FC8;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -40,11 +40,11 @@
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #E4CCFF;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #E4CCFF;
 }
 
 input:checked + .slider:before {
@@ -76,8 +76,8 @@ input:checked + .slider:before {
 }
 
 .formContainer {
-  width: 800px;
-  padding-left:800px;
+  width: 900px;  
+  padding-left:30%;
   padding-top: 50px;
 }
 
@@ -92,5 +92,6 @@ select {
 }
 
 .postButton{
-  padding: 20px;
+  width: 200px;
+  border: 2px solid #E4CCFF;
 }
