--- a/src/components/posts/postFeed.css
+++ b/src/components/posts/postFeed.css
@@ -1,8 +1,9 @@
 .postFeed{
-    display: flex;
+    /*display: flex;
     flex-flow: row-reverse wrap;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: space-around; */
+    column-count: 6;
     margin-top: 70px;
 }
 
@@ -15,6 +16,7 @@
     justify-content: center;
     align-items: center;
     justify-content: center;
+    break-inside: avoid-column;
 }
 
 .textPost{
@@ -23,6 +25,7 @@
     border-radius: 10px;
     padding:.5%;
     margin: 5px;
+    break-inside: avoid-column;
 }
 
 .titleStyle{
