--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,15 +1,11 @@
-.profileContainer {
-    display:flex;
-    height: 100vh;
-}
-
 .profilePostFeed{
-    justify-self: left;
-    display: flex;
+    /*display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content: space-evenly; */
+    column-count: 4;
+    margin-top: 70px;
     width: 70%;
 }
 
@@ -20,8 +16,8 @@
     min-width: 200px;
     background-color:#F7F3FF;
     border-radius: 10px;
-    padding:1%;
     margin: 10px;
+    break-inside: avoid;
 }
 
 .profileImgPost__img {
@@ -41,6 +37,7 @@
     border-radius: 10px;
     padding: 1%;
     margin: 10px;
+    break-inside: avoid;
 }
 
 .titleStyle{
