--- a/src/components/profile/editProfile.css
+++ b/src/components/profile/editProfile.css
@@ -20,9 +20,35 @@ label{
     font-size: 25px;
   }
 
+  .sideProfile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    justify-self: right;
+    background-color: #F7F3FF;
+    position: fixed;
+    height: 100%;
+    top:0;
+    left:70%;
+    z-index: 0;
+    flex-direction: column;
+}
+
 .sideProfile__title{
     width: 200px;
     height: 150px;
     position: fixed;
     top: 300px;
+}
+
+.sideProfile__info{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.sideProfile__name{
+    color: #3D304C;
+    padding-left: 20px;
 }
