--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,9 +1,4 @@
 .profilePostFeed{
-    /*display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: space-evenly; */
     column-count: 4;
     margin-top: 70px;
     width: 70%;
@@ -57,17 +52,29 @@
     top:0;
     left:70%;
     z-index: 0;
+    flex-direction: column;
 }
 
 .sideProfile__name{
     color: #3D304C;
+    padding-left: 20px;
 }
 
 .sideProfile__img{
     width: 100px;
     overflow: hidden;
     border-radius: 50%;
-    padding-right: 20px;
+}
+
+.sideProfile__info{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.sideProfile__bkm__btn {
+    text-decoration: none;
+    color: #3D304C;
 }
 
 .btnContainer {
@@ -94,4 +101,21 @@
 .link_styles {
     color:black;
     text-decoration: none;
+}
+
+.bkm__title{
+    display: flex;
+    padding-left: 49%;
+    height: 70px;
+    color: #3D304C;
+}
+
+.save {
+    display: flex;
+    justify-content: flex-start;
+    width: 80px;
+    height: 50px;
+    background-color: #E4CCFF;
+    opacity: .65;
+    border: 0px solid;
 }
