--- a/src/components/discover/discover.css
+++ b/src/components/discover/discover.css
@@ -1,7 +1,7 @@
 .disc__heads {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     padding-bottom: 10px;
 }
 
@@ -11,7 +11,6 @@
     padding-left: 30px;
 }
 .carousel{
-    padding-top: 30px;
     overflow: hidden;
     position: relative;
 }
@@ -61,7 +60,7 @@
     align-items: center;
     justify-content: center;
     flex-flow: column;
-    margin: 30px;
+    margin-left: 30px;
 }
 
 .post__content_product {
@@ -73,7 +72,6 @@
     height: 100%;
     background-color:#F7F3FF;
     border-radius: 10px;
-    padding:.5%;
 }
 
 .titleStyle{
@@ -94,7 +92,7 @@
     max-height: 160px;
     background-color:#F7F3FF;
     border-radius: 10px;
-    margin: 50px 30px;
+    margin: 0px 0px 50px 30px;
     padding-left: 50px;
 }
 
@@ -102,8 +100,4 @@
     display: flex;
     flex-direction: column;
     padding-left:50px;
-}
-
-.pageContainer{
-    padding-top: 1%;
 }
